Solved z-index bug with myEvaluations

--- a/CQA/Content/Site.css
+++ b/CQA/Content/Site.css
@@ -1176,7 +1176,7 @@ tr.pager td {
 	width: 80px;
 	overflow:visible;
 	position: absolute;
-	z-index = 101;
+	z-index: 101;
 }
 
 .myEvaluationText
